fix: add style overflow hidden #62

--- a/src/components/core/index.css
+++ b/src/components/core/index.css
@@ -24,6 +24,7 @@
   max-width: 100vw;
   max-height: 100vh;
   aspect-ratio: 16 / 9;
+  overflow: hidden;
 }
 
 .base-slide-cn {
